src/App.css
.App {
  text-align: center;
  padding: 10px 15px;
}
.app-container {
  display: flex;
  justify-content: space-evenly;
  align-items: center;
}
.aqiDataTable {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
}
table {
  border-collapse: collapse;
  text-align: center;
}
.viewBtn {
  padding: 0 10px;
  border-radius: 3px;
  background-color: #dae2ff;
}
.serialCol {
  width: 10%;
}
.cityCol {
  width: 40%;
}
.aqiCol {
  width: 15%;
}
.timestampCol {
  width: 25%;
}

tr {
  border: gray 1px solid;
}
td,
th {
  padding: 6px;
}

/* aqi color gradings */

.good {
  background-color: #55a84f;
}

.satisfactory {
  background-color: #a3c853;
}

.moderate {
  background-color: #fff833;
}

.poor {
  background-color: #f29c33;
}

.very-poor {
  background-color: #e93f33;
}

.severe {
  background-color: #af2d24;
}

